# mmcif-db-util

./: README.md  pyproject.toml
docs/: datatypes.txt  gettypes.py
mmcif_db_utils/: cli.py  config.py  data_loader.py  models.py  schemas.py
mmcif_db_utils/data/: compv4.txt  da_internal.txt  pdbe_all.txt
mmcif_db_utils/data_loader/: enums.py  loader.py  models.py
mmcif_db_utils/schema/: mappings.py  mmcif_dict.py  printers.py
tests/: test_data_loader.py  test_db_schemas.py  test_schemas.py
tests/data_loader/: test_data_loader.py  test_db_schemas.py
tests/fixtures/: 1o08.cif  2gc2.cif  categories.txt
tests/schema/: test_mappings.py  test_mmcif_dict.py
