[tool.poetry]
name = "mmcif_db_utils"
version = "0.1.0"
description = "A module for loading model data into the database."
authors = ["Weslley Morellato Bueno <wbueno@ebi.ac.uk>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "*"
gemmi = "*"
pytest = "*"
SQLAlchemy = "*"
wwpdb.utils.config = "*"
PyMySQL = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
black = "*"

[tool.poetry.scripts]
mmcif-db-utils = "mmcif_db_utils.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
markers = [
    "integration: tests involving the database"
]